--- a/app/src/main/res/layout/rv_item_detailboard.xml
+++ b/app/src/main/res/layout/rv_item_detailboard.xml
@@ -2,75 +2,99 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/iv_item_reboard_like"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_alignTop="@+id/iv_item_detailboard_profile_img"
-            android:layout_marginStart="-16dp"
-            android:layout_marginTop="1dp"
-            android:layout_toEndOf="@+id/tv_item_detailboard_contents"
-            android:src="@drawable/ic_like" />
-
-        <TextView
-            android:id="@+id/iv_item_reboard_like_cnt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/iv_item_reboard_like"
-            android:layout_toEndOf="@+id/iv_item_reboard_like"
-            android:text="10" />
-        <ImageView
-            android:layout_marginTop="12dp"
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_marginTop="20dp"
             android:id="@+id/iv_item_detailboard_profile_img"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_marginStart="19dp"
-            android:src="#b0caea"/>
+            android:src="@color/colorPrimary"/>
 
-        <TextView
-            android:layout_marginTop="12dp"
-            android:id="@+id/tv_item_detailboard_profile_name"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:id="@+id/iv_item_detailboard_top_layout"
+            android:layout_width="275dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="63.5dp"
-            android:letterSpacing="-0.01"
-            android:lineSpacingExtra="4sp"
-            android:textColor="#222222"
-            android:textSize="12sp"
-            android:text="이충엽" />
+            android:layout_toRightOf="@id/iv_item_detailboard_profile_img"
+            android:layout_marginLeft="16dp"
+            android:layout_alignTop="@+id/iv_item_detailboard_profile_img"
+            >
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="18dp">
+                        <TextView
+                            android:id="@+id/tv_item_detailboard_profile_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="#222222"
+                            android:textSize="12sp"
+                            android:text="이충엽"
+                            android:textStyle="bold"
+                            android:layout_centerVertical="true"
+                            />
+                        <View
+                            android:id="@+id/v_item_detailboard_v"
+                            android:layout_toRightOf="@id/tv_item_detailboard_profile_name"
+                            android:layout_width="1dp"
+                            android:layout_height="7.6dp"
+                            android:layout_marginLeft="7.2dp"
+                            android:layout_centerVertical="true"
+                            android:background="#999999" />
 
+                        <TextView
+                            android:layout_marginLeft="7.8dp"
+                            android:layout_toRightOf="@+id/v_item_detailboard_v"
+                            android:id="@+id/tv_item_detailboard_time"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="#525252"
+                            android:layout_centerVertical="true"
+                            android:textSize="10sp"
+                            android:text="2018/12/21  18:30" />
 
-        <View
-            android:id="@+id/v_item_detailboard_v"
-            android:layout_toRightOf="@id/tv_item_detailboard_profile_name"
-            android:layout_marginTop="15.5dp"
-            android:layout_width="1dp"
-            android:layout_height="7.6dp"
-     android:layout_marginLeft="7.2dp"
-            android:background="#999999" />
+                    <TextView
+                        android:id="@+id/iv_item_reboard_like_cnt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toLeftOf="@+id/iv_item_reboard_like"
+                        android:layout_marginRight="5.5dp"
+                        android:textColor="#222222"
+                        android:textSize="10sp"
+                        android:layout_centerVertical="true"
+                        android:text="999+"
+                        />
+
+                        <ImageView
+                            android:id="@+id/iv_item_reboard_like"
+                            android:layout_width="11.9dp"
+                            android:layout_height="10.4dp"
+                            android:src="@drawable/ic_like"
+                            android:layout_toLeftOf="@+id/iv_item_rebord_more"
+                            android:layout_marginRight="10.6dp"
+                            android:layout_centerVertical="true"
+                            />
+
+                        <ImageView
+                            android:id="@+id/iv_item_rebord_more"
+                            android:layout_width="15dp"
+                            android:layout_height="15dp"
+                            android:layout_marginTop="1dp"
+                            android:src="@drawable/bt_more"
+                            android:layout_alignParentRight="true"
+                            android:layout_centerVertical="true"
+                            />
+                </RelativeLayout>
+        </RelativeLayout>
 
         <TextView
-            android:layout_marginLeft="7.8dp"
-            android:layout_toRightOf="@+id/v_item_detailboard_v"
-            android:id="@+id/tv_item_detailboard_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="14dp"
-            android:letterSpacing="-0.01"
-            android:lineSpacingExtra="6sp"
-            android:textColor="#525252"
-            android:textSize="10sp"
-            android:text="4시간전" />
-        <TextView
-            android:layout_marginTop="38dp"
+            android:layout_marginTop="8dp"
             android:layout_marginStart="65dp"
             android:id="@+id/tv_item_detailboard_contents"
             android:layout_width="275dp"
             android:layout_height="wrap_content"
             android:textSize="13sp"
             android:textColor="#222222"
-            android:letterSpacing="-0.01"
-            android:lineSpacingExtra="9sp"
+            android:lineSpacingExtra="5sp"
+            android:layout_below="@+id/iv_item_detailboard_top_layout"
             android:text="http://www.changupguide.com이 사이트 참고하셔서 준비하시면 좋을거같아요 여러 스타트업의 일상스토리와 팁, 노하우 등을 공유하고 다양한 분야의 인재들이 소통하고있습니다ㅎ"
             />
         <ImageView
