--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -22,7 +22,7 @@
                     android:id="@+id/mypage_background_img"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/invalid_name"
+                    android:src="@drawable/img_default"
                     android:scaleType="fitXY"
                     />
 
