--- a/app/src/main/res/layout/fragmet_my_page_introduce.xml
+++ b/app/src/main/res/layout/fragmet_my_page_introduce.xml
@@ -321,6 +321,7 @@
                 android:layout_marginRight="38dp"
                 android:layout_below="@+id/mypage_board_content_tv"
                 android:layout_marginTop="5dp"
+                android:layout_marginBottom="21dp"
                 />
             </LinearLayout>
             </ScrollView>
