--- a/app/src/main/res/layout/rv_item_detailboard.xml
+++ b/app/src/main/res/layout/rv_item_detailboard.xml
@@ -25,7 +25,7 @@
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_marginStart="19dp"
-            android:src="#b0caea"/>
+            android:src="@drawable/img_sample"/>
 
         <TextView
             android:layout_marginTop="12dp"
