--- a/app/src/main/res/layout/activity_detail_board.xml
+++ b/app/src/main/res/layout/activity_detail_board.xml
@@ -373,15 +373,29 @@
             android:paddingLeft="10.6dp"
             android:textColorHint="#6d6d6d"
             android:background="@drawable/reboard_edie_circle_background"
+            android:imeOptions="actionDone"
             />
-        <Button
-            android:id="@+id/detail_board_reboard_btn"
+        <RelativeLayout
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:background="@drawable/rebord_send_btn"
-            android:layout_marginLeft="10dp"
             android:layout_gravity="center"
-            />
+            android:layout_marginLeft="10dp"
+            >
+
+            <Button
+                android:id="@+id/detail_board_reboard_btn"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/rebord_send_btn"
+                />
+            <Button
+                android:id="@+id/detail_board_reboard_modify_btn"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:text="수정"
+                android:textSize="5sp"
+                />
+        </RelativeLayout>
     </LinearLayout>
 
 </RelativeLayout>
