--- a/app/src/main/res/layout/activity_mypage_update.xml
+++ b/app/src/main/res/layout/activity_mypage_update.xml
@@ -20,6 +20,7 @@
             >
 
             <TextView
+                android:id="@+id/mypage_update_title_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="자기소개 수정"
