현재 비밀번호 검사 통신 틀 완성

--- a/app/src/main/res/layout/activity_passwd_modify.xml
+++ b/app/src/main/res/layout/activity_passwd_modify.xml
@@ -60,6 +60,7 @@
                 />
 
             <EditText
+                android:id="@+id/passwd_modify_passwd_edit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="60dp"
