현재 비밀번호 확인, 비밀번호 변경 완료.

--- a/app/src/main/res/layout/activity_password_confirm.xml
+++ b/app/src/main/res/layout/activity_password_confirm.xml
@@ -61,6 +61,7 @@
                 />
 
             <EditText
+                android:id="@+id/password_confirm_first_edit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="60dp"
@@ -72,6 +73,7 @@
                 />
 
             <EditText
+                android:id="@+id/password_confirm_second_edit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="60dp"
