--- a/app/src/main/res/layout/dialog_password_confirm.xml
+++ b/app/src/main/res/layout/dialog_password_confirm.xml
@@ -43,7 +43,7 @@
                 />
             <TextView
                 android:id="@+id/tv_dialog_password_text3"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingVertical="8dp"
                 android:paddingHorizontal="16dp"
@@ -52,6 +52,7 @@
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="6sp"
                 android:text="다시 로그인하기"
+                android:gravity="center"
                 android:layout_marginTop="100dp"
                 android:layout_centerHorizontal="true"
                 />
